Add a Makefile and simplify this package's own rules file using all the new toys.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ debhelper (7.0.0) UNRELEASED; urgency=low
     debian/tmp, and then will look in the current directory. This allows
     dh_install to interoperate with dh_auto_install without needing any
     special parameters.
+  * Add a Makefile and simplify this package's own rules file using
+    all the new toys.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
