--- a/debian/changelog
+++ b/debian/changelog
@@ -20,9 +20,9 @@ debhelper (7.0.0) UNRELEASED; urgency=low
     but not yet implemented.)
   * New v7 mode, which only has one change from v6, and is the new
     recommended default.
-  * dh_install: if --sourcedir is not specified, first look for files in
-    debian/tmp, and then will look in the current directory. This allows
-    dh_install to interoperate with dh_auto_install without needing any
+  * dh_install: In v7 mode, if --sourcedir is not specified, first look for
+    files in debian/tmp, and then will look in the current directory. This
+    allows dh_install to interoperate with dh_auto_install without needing any
     special parameters.
   * dh: New program that runs a series of debhelper commands in a sequence.
     This can be used to construct very short rules files (as short as 3
