dh_clean: In v7 mode, read debian/clean and delete all files listed therein.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -403,6 +403,10 @@ debian/tmp, and then will look in the current directory. This allows
 dh_install to interoperate with dh_auto_install without needing any special
 parameters.
 
+=item -
+
+dh_clean will read debian/clean and delete files listed there.
+
 =back
 
 =back
