--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2008-04-23 21:06-0400\n"
+"POT-Creation-Date: 2008-04-23 21:24-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: ENCODING"
 
 # type: =head1
-#: debhelper.pod:1 dh_builddeb:3 dh_clean:3 dh_compress:3 dh_desktop:3 dh_fixperms:3 dh_gconf:3 dh_gencontrol:3 dh_installcatalogs:3 dh_installchangelogs:3 dh_installcron:3 dh_installdebconf:3 dh_installdeb:3 dh_installdirs:3 dh_installdocs:3 dh_installemacsen:3 dh_installexamples:3 dh_installinfo:3 dh_installinit:3 dh_installlogcheck:3 dh_installlogrotate:3 dh_installmanpages:3 dh_installman:3 dh_installmenu:3 dh_installmime:3 dh_installmodules:3 dh_installpam:3 dh_install:3 dh_installppp:3 dh_installwm:3 dh_installxfonts:3 dh_link:3 dh_listpackages:3 dh_makeshlibs:3 dh_md5sums:3 dh_movefiles:3 dh_perl:3 dh_python:3 dh_scrollkeeper:3 dh_shlibdeps:3 dh_strip:3 dh_suidregister:3 dh_testdir:3 dh_testroot:3 dh_testversion:3 dh_undocumented:3 dh_usrlocal:3
+#: debhelper.pod:1 dh_builddeb:3 dh_compress:3 dh_desktop:3 dh_fixperms:3 dh_gconf:3 dh_gencontrol:3 dh_installcatalogs:3 dh_installchangelogs:3 dh_installcron:3 dh_installdebconf:3 dh_installdeb:3 dh_installdirs:3 dh_installdocs:3 dh_installemacsen:3 dh_installexamples:3 dh_installinfo:3 dh_installinit:3 dh_installlogcheck:3 dh_installlogrotate:3 dh_installmanpages:3 dh_installman:3 dh_installmenu:3 dh_installmime:3 dh_installmodules:3 dh_installpam:3 dh_install:3 dh_installppp:3 dh_installwm:3 dh_installxfonts:3 dh_link:3 dh_listpackages:3 dh_makeshlibs:3 dh_md5sums:3 dh_movefiles:3 dh_perl:3 dh_python:3 dh_scrollkeeper:3 dh_shlibdeps:3 dh_strip:3 dh_suidregister:3 dh_testdir:3 dh_testroot:3 dh_testversion:3 dh_undocumented:3 dh_usrlocal:3
 msgid "NAME"
 msgstr ""
 
@@ -885,7 +885,7 @@ msgid ""
 msgstr ""
 
 # type: =head1
-#: debhelper.pod:494 dh_builddeb:85 dh_clean:116 dh_compress:189 dh_desktop:47 dh_fixperms:110 dh_gconf:90 dh_gencontrol:73 dh_installcatalogs:111 dh_installchangelogs:125 dh_installcron:61 dh_installdebconf:118 dh_installdeb:94 dh_installdirs:83 dh_installdocs:237 dh_installemacsen:109 dh_installexamples:103 dh_installinfo:103 dh_installinit:197 dh_installlogcheck:51 dh_installlogrotate:50 dh_installmanpages:197 dh_installman:249 dh_installmenu:80 dh_installmime:85 dh_installmodules:116 dh_installpam:52 dh_install:268 dh_installppp:56 dh_installwm:107 dh_installxfonts:86 dh_link:223 dh_listpackages:28 dh_makeshlibs:222 dh_md5sums:86 dh_movefiles:162 dh_perl:152 dh_python:282 dh_scrollkeeper:76 dh_shlibdeps:159 dh_strip:224 dh_suidregister:117 dh_testdir:43 dh_testroot:26 dh_testversion:74 dh_undocumented:28 dh_usrlocal:114
+#: debhelper.pod:494 dh_builddeb:85 dh_clean:121 dh_compress:189 dh_desktop:47 dh_fixperms:110 dh_gconf:90 dh_gencontrol:73 dh_installcatalogs:111 dh_installchangelogs:125 dh_installcron:61 dh_installdebconf:118 dh_installdeb:94 dh_installdirs:83 dh_installdocs:237 dh_installemacsen:109 dh_installexamples:103 dh_installinfo:103 dh_installinit:197 dh_installlogcheck:51 dh_installlogrotate:50 dh_installmanpages:197 dh_installman:249 dh_installmenu:80 dh_installmime:85 dh_installmodules:116 dh_installpam:52 dh_install:268 dh_installppp:56 dh_installwm:107 dh_installxfonts:86 dh_link:223 dh_listpackages:28 dh_makeshlibs:222 dh_md5sums:86 dh_movefiles:162 dh_perl:152 dh_python:282 dh_scrollkeeper:76 dh_shlibdeps:159 dh_strip:224 dh_suidregister:117 dh_testdir:43 dh_testroot:26 dh_testversion:74 dh_undocumented:28 dh_usrlocal:114
 msgid "SEE ALSO"
 msgstr ""
 
@@ -910,12 +910,12 @@ msgid "Debhelper web site."
 msgstr ""
 
 # type: =head1
-#: debhelper.pod:508 dh_builddeb:91 dh_clean:122 dh_compress:195 dh_desktop:53 dh_fixperms:116 dh_gconf:96 dh_gencontrol:79 dh_installcatalogs:117 dh_installchangelogs:131 dh_installcron:67 dh_installdebconf:124 dh_installdeb:100 dh_installdirs:89 dh_installdocs:243 dh_installemacsen:115 dh_installexamples:109 dh_installinfo:109 dh_installinit:203 dh_installlogcheck:57 dh_installlogrotate:56 dh_installmanpages:203 dh_installman:255 dh_installmenu:88 dh_installmime:91 dh_installmodules:122 dh_installpam:58 dh_install:274 dh_installppp:62 dh_installwm:113 dh_installxfonts:92 dh_link:229 dh_listpackages:34 dh_makeshlibs:228 dh_md5sums:92 dh_movefiles:168 dh_perl:158 dh_python:288 dh_scrollkeeper:82 dh_shlibdeps:165 dh_strip:230 dh_suidregister:123 dh_testdir:49 dh_testroot:32 dh_testversion:80 dh_undocumented:34 dh_usrlocal:120
+#: debhelper.pod:508 dh_builddeb:91 dh_clean:127 dh_compress:195 dh_desktop:53 dh_fixperms:116 dh_gconf:96 dh_gencontrol:79 dh_installcatalogs:117 dh_installchangelogs:131 dh_installcron:67 dh_installdebconf:124 dh_installdeb:100 dh_installdirs:89 dh_installdocs:243 dh_installemacsen:115 dh_installexamples:109 dh_installinfo:109 dh_installinit:203 dh_installlogcheck:57 dh_installlogrotate:56 dh_installmanpages:203 dh_installman:255 dh_installmenu:88 dh_installmime:91 dh_installmodules:122 dh_installpam:58 dh_install:274 dh_installppp:62 dh_installwm:113 dh_installxfonts:92 dh_link:229 dh_listpackages:34 dh_makeshlibs:228 dh_md5sums:92 dh_movefiles:168 dh_perl:158 dh_python:288 dh_scrollkeeper:82 dh_shlibdeps:165 dh_strip:230 dh_suidregister:123 dh_testdir:49 dh_testroot:32 dh_testversion:80 dh_undocumented:34 dh_usrlocal:120
 msgid "AUTHOR"
 msgstr ""
 
 # type: textblock
-#: debhelper.pod:510 dh_builddeb:93 dh_clean:124 dh_compress:197 dh_fixperms:118 dh_gencontrol:81 dh_installchangelogs:133 dh_installcron:69 dh_installdebconf:126 dh_installdeb:102 dh_installdirs:91 dh_installdocs:245 dh_installemacsen:117 dh_installexamples:111 dh_installinfo:111 dh_installinit:205 dh_installlogrotate:58 dh_installmanpages:205 dh_installman:257 dh_installmenu:90 dh_installmime:93 dh_installmodules:124 dh_installpam:60 dh_install:276 dh_installppp:64 dh_installwm:115 dh_installxfonts:94 dh_link:231 dh_listpackages:36 dh_makeshlibs:230 dh_md5sums:94 dh_movefiles:170 dh_shlibdeps:167 dh_strip:232 dh_suidregister:125 dh_testdir:51 dh_testroot:34 dh_testversion:82 dh_undocumented:36
+#: debhelper.pod:510 dh_builddeb:93 dh_clean:129 dh_compress:197 dh_fixperms:118 dh_gencontrol:81 dh_installchangelogs:133 dh_installcron:69 dh_installdebconf:126 dh_installdeb:102 dh_installdirs:91 dh_installdocs:245 dh_installemacsen:117 dh_installexamples:111 dh_installinfo:111 dh_installinit:205 dh_installlogrotate:58 dh_installmanpages:205 dh_installman:257 dh_installmenu:90 dh_installmime:93 dh_installmodules:124 dh_installpam:60 dh_install:276 dh_installppp:64 dh_installwm:115 dh_installxfonts:94 dh_link:231 dh_listpackages:36 dh_makeshlibs:230 dh_md5sums:94 dh_movefiles:170 dh_shlibdeps:167 dh_strip:232 dh_suidregister:125 dh_testdir:51 dh_testroot:34 dh_testversion:82 dh_undocumented:36
 msgid "Joey Hess <joeyh@debian.org>"
 msgstr ""
 
@@ -983,18 +983,13 @@ msgid "Pass I<params> to L<dpkg-deb(1)> when it is used to build the package."
 msgstr ""
 
 # type: textblock
-#: dh_builddeb:87 dh_clean:118 dh_compress:191 dh_fixperms:112 dh_gconf:92 dh_gencontrol:75 dh_installcatalogs:113 dh_installchangelogs:127 dh_installcron:63 dh_installdebconf:120 dh_installdeb:96 dh_installdirs:85 dh_installdocs:239 dh_installemacsen:111 dh_installexamples:105 dh_installinfo:105 dh_installinit:199 dh_installlogcheck:53 dh_installlogrotate:52 dh_installmanpages:199 dh_installman:251 dh_installmime:87 dh_installmodules:118 dh_installpam:54 dh_install:270 dh_installppp:58 dh_installwm:109 dh_installxfonts:88 dh_link:225 dh_listpackages:30 dh_makeshlibs:224 dh_md5sums:88 dh_movefiles:164 dh_perl:154 dh_python:284 dh_strip:226 dh_suidregister:119 dh_testdir:45 dh_testroot:28 dh_testversion:76 dh_undocumented:30 dh_usrlocal:116
+#: dh_builddeb:87 dh_clean:123 dh_compress:191 dh_fixperms:112 dh_gconf:92 dh_gencontrol:75 dh_installcatalogs:113 dh_installchangelogs:127 dh_installcron:63 dh_installdebconf:120 dh_installdeb:96 dh_installdirs:85 dh_installdocs:239 dh_installemacsen:111 dh_installexamples:105 dh_installinfo:105 dh_installinit:199 dh_installlogcheck:53 dh_installlogrotate:52 dh_installmanpages:199 dh_installman:251 dh_installmime:87 dh_installmodules:118 dh_installpam:54 dh_install:270 dh_installppp:58 dh_installwm:109 dh_installxfonts:88 dh_link:225 dh_listpackages:30 dh_makeshlibs:224 dh_md5sums:88 dh_movefiles:164 dh_perl:154 dh_python:284 dh_strip:226 dh_suidregister:119 dh_testdir:45 dh_testroot:28 dh_testversion:76 dh_undocumented:30 dh_usrlocal:116
 msgid "L<debhelper(7)>"
 msgstr ""
 
 # type: textblock
-#: dh_builddeb:89 dh_clean:120 dh_compress:193 dh_desktop:51 dh_fixperms:114 dh_gconf:94 dh_gencontrol:77 dh_installchangelogs:129 dh_installcron:65 dh_installdebconf:122 dh_installdeb:98 dh_installdirs:87 dh_installdocs:241 dh_installemacsen:113 dh_installexamples:107 dh_installinfo:107 dh_installinit:201 dh_installlogrotate:54 dh_installmanpages:201 dh_installman:253 dh_installmenu:86 dh_installmime:89 dh_installmodules:120 dh_installpam:56 dh_install:272 dh_installppp:60 dh_installwm:111 dh_installxfonts:90 dh_link:227 dh_listpackages:32 dh_makeshlibs:226 dh_md5sums:90 dh_movefiles:166 dh_perl:156 dh_python:286 dh_scrollkeeper:80 dh_shlibdeps:163 dh_strip:228 dh_suidregister:121 dh_testdir:47 dh_testroot:30 dh_testversion:78 dh_undocumented:32 dh_usrlocal:118
+#: dh_builddeb:89 dh_clean:125 dh_compress:193 dh_desktop:51 dh_fixperms:114 dh_gconf:94 dh_gencontrol:77 dh_installchangelogs:129 dh_installcron:65 dh_installdebconf:122 dh_installdeb:98 dh_installdirs:87 dh_installdocs:241 dh_installemacsen:113 dh_installexamples:107 dh_installinfo:107 dh_installinit:201 dh_installlogrotate:54 dh_installmanpages:201 dh_installman:253 dh_installmenu:86 dh_installmime:89 dh_installmodules:120 dh_installpam:56 dh_install:272 dh_installppp:60 dh_installwm:111 dh_installxfonts:90 dh_link:227 dh_listpackages:32 dh_makeshlibs:226 dh_md5sums:90 dh_movefiles:166 dh_perl:156 dh_python:286 dh_scrollkeeper:80 dh_shlibdeps:163 dh_strip:228 dh_suidregister:121 dh_testdir:47 dh_testroot:30 dh_testversion:78 dh_undocumented:32 dh_usrlocal:118
 msgid "This program is a part of debhelper."
-msgstr ""
-
-# type: textblock
-#: dh_clean:5
-msgid "dh_clean - clean up package build directories"
 msgstr ""
 
 # type: textblock
@@ -1040,13 +1035,13 @@ msgstr ""
 # type: textblock
 #: dh_clean:36
 msgid ""
-"Do not delete debian/files. When do you want to use this? Anytime you have a "
-"debian/rules that has 2 binary targets that build different .deb packages; "
-"for example, one target is binary-arch, and the other is binary-indep, or "
-"one target builds the shared library, and the other the -dev package. If you "
-"didn't use -k in these cases, then debian/files would be deleted in the "
-"middle, and your changes file will only contain the last binary package that "
-"was built."
+"Do not delete debian/files, or files listed in debian/clean. When do you "
+"want to use this? Anytime you have a debian/rules that has 2 binary targets "
+"that build different .deb packages; for example, one target is binary-arch, "
+"and the other is binary-indep, or one target builds the shared library, and "
+"the other the -dev package. If you didn't use -k in these cases, then "
+"debian/files would be deleted in the middle, and your changes file will only "
+"contain the last binary package that was built."
 msgstr ""
 
 # type: =item
