dh_clean: In v7 mode, automatically delete *-stamp files.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -407,6 +407,10 @@ parameters.
 
 dh_clean will read debian/clean and delete files listed there.
 
+=item -
+
+dh_clean will delete toplevel *-stamp files.
+
 =back
 
 =back
