--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.0.0) UNRELEASED; urgency=low
+debhelper (7.0.0) unstable; urgency=low
 
   * dh: New program that runs a series of debhelper commands in a sequence.
     This can be used to construct very short rules files (as short as 3
@@ -34,7 +34,7 @@ debhelper (7.0.0) UNRELEASED; urgency=low
   * dh_prep: New program, does the same as dh_clean -k (which will be
     deprecated later).
 
- -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 23 Apr 2008 23:14:57 -0400
 
 debhelper (6.0.12) unstable; urgency=low
 
