I lied, one more v7 change slipped in..
* dh_installchangelogs: In v7 mode, if no upstream changelog is specified,
  and the package is not native, guess at a few common changelog filenames.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -411,6 +411,11 @@ dh_clean will read debian/clean and delete files listed there.
 
 dh_clean will delete toplevel *-stamp files.
 
+=item -
+
+dh_installchangelogs will guess at what file is the upstream changelog if
+none is specified.
+
 =back
 
 =back
