--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.0.1) unstable; urgency=low
+
+  * I lied, one more v7 change slipped in..
+  * dh_installchangelogs: In v7 mode, if no upstream changelog is specified,
+    and the package is not native, guess at a few common changelog filenames.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 Apr 2008 00:16:19 -0400
+
 debhelper (7.0.0) unstable; urgency=low
 
   * dh: New program that runs a series of debhelper commands in a sequence.
