--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.0.2) UNRELEASED; urgency=low
+
+  * dh: Optimise the case where the binary-arch or binary-indep sequence is
+    run and there are no packages of that type.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 Apr 2008 14:10:56 -0400
+
 debhelper (7.0.1) unstable; urgency=low
 
   * I lied, one more v7 change slipped in..
