--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (7.0.2) UNRELEASED; urgency=low
 
   * dh: Optimise the case where the binary-arch or binary-indep sequence is
     run and there are no packages of that type.
+  * dh_auto_configure: Set PERL_MM_USE_DEFAULT when configuring MakeMaker
+    packages to avoid interactive prompts.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 24 Apr 2008 14:10:56 -0400
 
