dh_auto_*: Also support packages using Module::Build.
* dh_auto_*: Also support packages using Module::Build.
* dh_auto_*: Fix some calls to setup.py.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (7.0.2) UNRELEASED; urgency=low
     run and there are no packages of that type.
   * dh_auto_configure: Set PERL_MM_USE_DEFAULT when configuring MakeMaker
     packages to avoid interactive prompts.
+  * dh_auto_*: Also support packages using Module::Build.
+  * dh_auto_*: Fix some calls to setup.py.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 24 Apr 2008 14:10:56 -0400
 
