dh_install: Find all possible cases of "changelog" and "changes", rather than just looking for some predefined common cases.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,16 @@
-debhelper (7.0.2) UNRELEASED; urgency=low
+debhelper (7.0.2) unstable; urgency=low
 
   * dh: Optimise the case where the binary-arch or binary-indep sequence is
     run and there are no packages of that type.
   * dh_auto_configure: Set PERL_MM_USE_DEFAULT when configuring MakeMaker
     packages to avoid interactive prompts.
   * dh_auto_*: Also support packages using Module::Build.
-  * dh_auto_*: Fix some calls to setup.py.
+  * dh_auto_*: Fix some calls to setup.py. Now tested and working with
+    python packages.
+  * dh_install: Find all possible cases of "changelog" and "changes", rather
+    than just looking for some predefined common cases.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 24 Apr 2008 14:10:56 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 Apr 2008 21:55:49 -0400
 
 debhelper (7.0.1) unstable; urgency=low
 
