--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.3) UNRELEASED; urgency=low
+
+  * dh: Fix man page typos. Closes: #477933
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 25 Apr 2008 16:30:49 -0400
+
 debhelper (7.0.2) unstable; urgency=low
 
   * dh: Optimise the case where the binary-arch or binary-indep sequence is
