Add missing $! to error message when the log can't be opened.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (7.0.3) UNRELEASED; urgency=low
 
   * dh: Fix man page typos. Closes: #477933
+  * Add missing $! to error message when the log can't be opened.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 25 Apr 2008 16:30:49 -0400
 
