--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.4) UNRELEASED; urgency=low
+
+  * Fix underescaped $ in Makefile. Closes: #478475
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 29 Apr 2008 12:22:00 -0400
+
 debhelper (7.0.3) unstable; urgency=low
 
   * dh: Fix man page typos. Closes: #477933
