--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (7.0.4) UNRELEASED; urgency=low
 
   * Fix underescaped $ in Makefile. Closes: #478475
+  * dh_auto_test: Run tests for Module::Build packages. (Florian Ragwitz)
 
  -- Joey Hess <joeyh@debian.org>  Tue, 29 Apr 2008 12:22:00 -0400
 
