--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (7.0.4) UNRELEASED; urgency=low
+debhelper (7.0.4) unstable; urgency=low
 
   * Fix underescaped $ in Makefile. Closes: #478475
   * dh_auto_test: Run tests for Module::Build packages. (Florian Ragwitz)
 
- -- Joey Hess <joeyh@debian.org>  Tue, 29 Apr 2008 12:22:00 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 30 Apr 2008 02:17:01 -0400
 
 debhelper (7.0.3) unstable; urgency=low
 
