Convert copyright file to new format.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.5) UNRELEASED; urgency=low
+
+  * Convert copyright file to new format.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 30 Apr 2008 18:19:13 -0400
+
 debhelper (7.0.4) unstable; urgency=low
 
   * Fix underescaped $ in Makefile. Closes: #478475
