dh_test*: inhibit logging. Closes: #478958

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-debhelper (7.0.5) UNRELEASED; urgency=low
+debhelper (7.0.5) unstable; urgency=low
 
   * Convert copyright file to new format.
+  * dh_test*: inhibit logging. Closes: #478958
 
- -- Joey Hess <joeyh@debian.org>  Wed, 30 Apr 2008 18:19:13 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 01 May 2008 19:52:00 -0400
 
 debhelper (7.0.4) unstable; urgency=low
 
