--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.6) UNRELEASED; urgency=low
+
+  * dh_auto_test: Correct Module::Build tests.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 03 May 2008 12:56:49 -0400
+
 debhelper (7.0.5) unstable; urgency=low
 
   * Convert copyright file to new format.
