--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.0.6) UNRELEASED; urgency=low
+debhelper (7.0.6) unstable; urgency=low
 
   * dh_auto_test: Correct Module::Build tests.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 03 May 2008 12:56:49 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 03 May 2008 12:58:50 -0400
 
 debhelper (7.0.5) unstable; urgency=low
 
