dh_installxfonts: Fix precidence problem that exposes a new warning message in perl 5.10.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.0.7) unstable; urgency=low
+
+  * dh_installxfonts: Fix precidence problem that exposes a new warning
+    message in perl 5.10.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 04 May 2008 13:43:41 -0400
+
 debhelper (7.0.6) unstable; urgency=low
 
   * dh_auto_test: Correct Module::Build tests.
