rules.tiny: Typo fix. Closes: #479647

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.9) UNRELEASED; urgency=low
+
+  * rules.tiny: Typo fix. Closes: #479647
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 05 May 2008 18:53:10 -0400
+
 debhelper (7.0.8) unstable; urgency=low
 
   * dh: Add an interface that third-party packages providing debhelper commands
