--- a/doc/TODO
+++ b/doc/TODO
@@ -30,10 +30,11 @@ Wishlist items:
 
   This needs more thought.
   
-v7:
+v9:
 
 * escaping in config files (for whitespace)?
 * make dh_install use hard links for efficiency
+* dh_installinit --restart-after-upgrade as default?
 
 Deprecated:
 
