--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ debhelper (7.0.9) UNRELEASED; urgency=low
     its downtime minimal. Since some daemons could break if files are upgraded
     while they're running, it's not the default. It might become the default
     in a future (v8) compatability level. Closes: #471060
-  * dh: fix POS error. Closes: #480191
+  * dh: fix POD error. Closes: #480191
 
  -- Joey Hess <joeyh@debian.org>  Mon, 05 May 2008 18:53:10 -0400
 
