dh: Add remove_command to the sequence interface.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ debhelper (7.0.9) UNRELEASED; urgency=low
     in a future (v8) compatability level. Closes: #471060
   * dh: fix POD error. Closes: #480191
   * dh: Typo fixes. Closes: #480200
+  * dh: Add remove_command to the sequence interface.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 05 May 2008 18:53:10 -0400
 
