dh_auto_clean: setup.py clean can create pyc files. Remove. Closes: #481899

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ debhelper (7.0.9) UNRELEASED; urgency=low
   * dh: fix POD error. Closes: #480191
   * dh: Typo fixes. Closes: #480200
   * dh: Add remove_command to the sequence interface.
+  * dh_auto_clean: setup.py clean can create pyc files. Remove. Closes: #481899
 
  -- Joey Hess <joeyh@debian.org>  Mon, 05 May 2008 18:53:10 -0400
 
