--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,17 @@
-debhelper (7.0.9) UNRELEASED; urgency=low
+debhelper (7.0.9) unstable; urgency=low
 
   * rules.tiny: Typo fix. Closes: #479647
   * dh_installinit: Add --restart-after-upgrade, which avoids stopping a
     daemon in the prerm, and instead restarts it in the postinst, keeping
     its downtime minimal. Since some daemons could break if files are upgraded
     while they're running, it's not the default. It might become the default
-    in a future (v8) compatability level. Closes: #471060
+    in a future (v8) compatibility level. Closes: #471060
   * dh: fix POD error. Closes: #480191
   * dh: Typo fixes. Closes: #480200
   * dh: Add remove_command to the sequence interface.
   * dh_auto_clean: setup.py clean can create pyc files. Remove. Closes: #481899
 
- -- Joey Hess <joeyh@debian.org>  Mon, 05 May 2008 18:53:10 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 19 May 2008 12:47:47 -0400
 
 debhelper (7.0.8) unstable; urgency=low
 
