--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (7.0.11) UNRELEASED; urgency=low
 
   * dh: Man page fix. Closes: #485116
+  * Add stamp files to example rules targets. Closes: #486327
 
  -- Joey Hess <joeyh@debian.org>  Sun, 08 Jun 2008 12:21:48 -0400
 
