--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (7.0.11) UNRELEASED; urgency=low
 
   * dh: Man page fix. Closes: #485116
   * Add stamp files to example rules targets. Closes: #486327
+  * Add a build dependency on file. The rules file now runs dh_strip and
+    dh_shlibdeps, which both use it. (It could be changed not to, but
+    it's good to have it run all the commands as a test.) Closes: #486439
 
  -- Joey Hess <joeyh@debian.org>  Sun, 08 Jun 2008 12:21:48 -0400
 
