Typo fix. Closes: #486464

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -384,7 +384,7 @@ DH_ALWAYS_EXCLUDE, if it was set to a list of things to exclude, such as
 =item -
 
 dh_installman allows overwriting existing man pages in the package build
-directory. In previous compatability levels it silently refuses to do this.
+directory. In previous compatibility levels it silently refuses to do this.
 
 =back
 
