--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -699,7 +699,7 @@ msgstr ""
 #: debhelper.pod:386
 msgid ""
 "dh_installman allows overwriting existing man pages in the package build "
-"directory. In previous compatability levels it silently refuses to do this."
+"directory. In previous compatibility levels it silently refuses to do this."
 msgstr ""
 
 # type: =item
@@ -1472,7 +1472,7 @@ msgstr ""
 #: dh_installchangelogs:33
 msgid ""
 "An upstream changelog file may be specified as an option. If none is "
-"specified, a few common filenames are tried. (In compatability level 7 and "
+"specified, a few common filenames are tried. (In compatibility level 7 and "
 "above.)"
 msgstr ""
 
@@ -2693,7 +2693,7 @@ msgstr ""
 # type: textblock
 #: dh_install:43
 msgid ""
-"From debhelper compatability level 7 on, if --sourcedir is not specified, "
+"From debhelper compatibility level 7 on, if --sourcedir is not specified, "
 "dh_install will install files from debian/tmp if the directory contains the "
 "files. Otherwise, it will install files from the current directory."
 msgstr ""
