--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (7.0.11) UNRELEASED; urgency=low
   * Add a build dependency on file. The rules file now runs dh_strip and
     dh_shlibdeps, which both use it. (It could be changed not to, but
     it's good to have it run all the commands as a test.) Closes: #486439
+  * Typo fix. Closes: #486464
 
  -- Joey Hess <joeyh@debian.org>  Sun, 08 Jun 2008 12:21:48 -0400
 
