--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.0.11) UNRELEASED; urgency=low
+debhelper (7.0.11) unstable; urgency=low
 
   * dh: Man page fix. Closes: #485116
   * Add stamp files to example rules targets. Closes: #486327
@@ -7,7 +7,7 @@ debhelper (7.0.11) UNRELEASED; urgency=low
     it's good to have it run all the commands as a test.) Closes: #486439
   * Typo fix. Closes: #486464
 
- -- Joey Hess <joeyh@debian.org>  Sun, 08 Jun 2008 12:21:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Jun 2008 12:39:21 -0400
 
 debhelper (7.0.10) unstable; urgency=low
 
