--- a/doc/TODO
+++ b/doc/TODO
@@ -30,11 +30,12 @@ Wishlist items:
 
   This needs more thought.
   
-v9:
+v8:
 
 * escaping in config files (for whitespace)?
 * make dh_install use hard links for efficiency
 * dh_installinit --restart-after-upgrade as default?
+* #487006: dh_installman with 3-letter codes
 
 Deprecated:
 
