Correct docs about dh_install and debian/tmp in v7 mode
* Correct docs about dh_install and debian/tmp in v7 mode. It first looks in
  the current directory, or whatever is configured with --srcdir. Then it
  always falls back to looking in debian/tmp.
* Medium urgency to get this doc fix into testing.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (7.0.12) UNRELEASED; urgency=medium
+
+  * Correct docs about dh_install and debian/tmp in v7 mode. It first looks in
+    the current directory, or whatever is configured with --srcdir. Then it
+    always falls back to looking in debian/tmp.
+  * Medium urgency to get this doc fix into testing.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 25 Jun 2008 03:30:49 -0400
+
 debhelper (7.0.11) unstable; urgency=low
 
   * dh: Man page fix. Closes: #485116
