--- a/debhelper.pod
+++ b/debhelper.pod
@@ -398,10 +398,10 @@ Changes from V6 are:
 
 =item -
 
-dh_install, if --sourcedir is not specified, will first look for files in
-debian/tmp, and then will look in the current directory. This allows
-dh_install to interoperate with dh_auto_install without needing any special
-parameters.
+dh_install, will fall back to looking for files in debian/tmp if it doesn't
+find them in the current directory (or wherever you tell it look using
+--srcdir). This allows dh_install to interoperate with dh_auto_install,
+which installs to debian/tmp, without needing any special parameters.
 
 =item -
 
