--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
-"POT-Creation-Date: 2008-05-07 16:32-0400\n"
+"POT-Creation-Date: 2008-06-25 03:37-0400\n"
 "PO-Revision-Date: 2006-11-19 20:50+0100\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -972,10 +972,10 @@ msgstr "Les changements par rapport à la version 3 S<sont :>"
 # type: textblock
 #: debhelper.pod:401
 msgid ""
-"dh_install, if --sourcedir is not specified, will first look for files in "
-"debian/tmp, and then will look in the current directory. This allows "
-"dh_install to interoperate with dh_auto_install without needing any special "
-"parameters."
+"dh_install, will fall back to looking for files in debian/tmp if it doesn't "
+"find them in the current directory (or wherever you tell it look using --"
+"srcdir). This allows dh_install to interoperate with dh_auto_install, which "
+"installs to debian/tmp, without needing any special parameters."
 msgstr ""
 
 # type: textblock
@@ -1205,7 +1205,7 @@ msgstr ""
 "dans DH_ALWAYS_EXCLUDE=CVS:.svn"
 
 # type: =head1
-#: debhelper.pod:503 dh_builddeb:85 dh_clean:129 dh_compress:189 dh_desktop:47
+#: debhelper.pod:503 dh_builddeb:85 dh_clean:129 dh_compress:190 dh_desktop:47
 #: dh_fixperms:110 dh_gconf:92 dh_gencontrol:73 dh_installcatalogs:109
 #: dh_installchangelogs:140 dh_installcron:61 dh_installdebconf:118
 #: dh_installdeb:94 dh_installdirs:83 dh_installdocs:237 dh_installemacsen:109
@@ -1242,7 +1242,7 @@ msgid "Debhelper web site."
 msgstr "Le site internet de debhelper."
 
 # type: =head1
-#: debhelper.pod:517 dh_builddeb:91 dh_clean:135 dh_compress:195 dh_desktop:53
+#: debhelper.pod:517 dh_builddeb:91 dh_clean:135 dh_compress:196 dh_desktop:53
 #: dh_fixperms:116 dh_gconf:98 dh_gencontrol:79 dh_installcatalogs:115
 #: dh_installchangelogs:146 dh_installcron:67 dh_installdebconf:124
 #: dh_installdeb:100 dh_installdirs:89 dh_installdocs:243
@@ -1259,7 +1259,7 @@ msgid "AUTHOR"
 msgstr "AUTEUR"
 
 # type: textblock
-#: debhelper.pod:519 dh_builddeb:93 dh_clean:137 dh_compress:197
+#: debhelper.pod:519 dh_builddeb:93 dh_clean:137 dh_compress:198
 #: dh_fixperms:118 dh_gencontrol:81 dh_installchangelogs:148 dh_installcron:69
 #: dh_installdebconf:126 dh_installdeb:102 dh_installdirs:91
 #: dh_installdocs:245 dh_installemacsen:117 dh_installexamples:111
@@ -1357,7 +1357,7 @@ msgstr ""
 "Fournit les I<paramètres> à L<dpkg-deb(1)> lors de la construction du paquet."
 
 # type: textblock
-#: dh_builddeb:87 dh_clean:131 dh_compress:191 dh_fixperms:112 dh_gconf:94
+#: dh_builddeb:87 dh_clean:131 dh_compress:192 dh_fixperms:112 dh_gconf:94
 #: dh_gencontrol:75 dh_installcatalogs:111 dh_installchangelogs:142
 #: dh_installcron:63 dh_installdebconf:120 dh_installdeb:96 dh_installdirs:85
 #: dh_installdocs:239 dh_installemacsen:111 dh_installexamples:105
@@ -1372,7 +1372,7 @@ msgid "L<debhelper(7)>"
 msgstr "L<debhelper(7)>"
 
 # type: textblock
-#: dh_builddeb:89 dh_clean:133 dh_compress:193 dh_desktop:51 dh_fixperms:114
+#: dh_builddeb:89 dh_clean:133 dh_compress:194 dh_desktop:51 dh_fixperms:114
 #: dh_gconf:96 dh_gencontrol:77 dh_installchangelogs:144 dh_installcron:65
 #: dh_installdebconf:122 dh_installdeb:98 dh_installdirs:87 dh_installdocs:241
 #: dh_installemacsen:113 dh_installexamples:107 dh_installinfo:107
@@ -3677,9 +3677,9 @@ msgstr ""
 # type: textblock
 #: dh_install:43
 msgid ""
-"From debhelper compatibility level 7 on, if --sourcedir is not specified, "
-"dh_install will install files from debian/tmp if the directory contains the "
-"files. Otherwise, it will install files from the current directory."
+"From debhelper compatibility level 7 on, dh_install will fall back to "
+"looking in debian/tmp for files, if it doesn't find them in the current "
+"directory (or whereever you've told it to look using --srcdir)."
 msgstr ""
 
 # type: =item
