--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.0.14) UNRELEASED; urgency=low
+
+  * Load python-support sequence file first, to allow ones loaded later to
+    disable it.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 05 Jul 2008 08:22:43 -0400
+
 debhelper (7.0.13) unstable; urgency=low
 
   * dh_auto_install: Rather than looking at the number of binary packages
