--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (7.0.14) UNRELEASED; urgency=low
+debhelper (7.0.14) unstable; urgency=low
 
   * Load python-support sequence file first, to allow ones loaded later to
     disable it.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 05 Jul 2008 08:22:43 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 05 Jul 2008 08:23:32 -0400
 
 debhelper (7.0.13) unstable; urgency=low
 
