dh_clean: Do not delete *-stamp files in -k mode in v7. Closes: #489918

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.15) UNRELEASED; urgency=low
+
+  * dh_clean: Do not delete *-stamp files in -k mode in v7. Closes: #489918
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 08 Jul 2008 13:50:07 -0400
+
 debhelper (7.0.14) unstable; urgency=low
 
   * Load python-support sequence file first, to allow ones loaded later to
