--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.0.15) UNRELEASED; urgency=low
+debhelper (7.0.15) unstable; urgency=low
 
   * dh_clean: Do not delete *-stamp files in -k mode in v7. Closes: #489918
 
- -- Joey Hess <joeyh@debian.org>  Tue, 08 Jul 2008 13:50:07 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2008 16:16:11 -0400
 
 debhelper (7.0.14) unstable; urgency=low
 
