--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.0.16) UNRELEASED; urgency=low
+
+  * dh: Avoid passing --with on to subcommands. Closes: #490886
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 14 Jul 2008 20:35:47 -0400
+
 debhelper (7.0.15) unstable; urgency=low
 
   * dh_clean: Do not delete *-stamp files in -k mode in v7. Closes: #489918
