dh_installchangelogs: When searching for changelog in v7 mode, skip empty files. Closes: #490937

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (7.0.16) UNRELEASED; urgency=low
 
   * dh: Avoid passing --with on to subcommands. Closes: #490886
+  * dh_installchangelogs: When searching for changelog in v7 mode, skip
+    empty files. Closes: #490937
 
  -- Joey Hess <joeyh@debian.org>  Mon, 14 Jul 2008 20:35:47 -0400
 
