--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (7.0.16) UNRELEASED; urgency=low
+debhelper (7.0.16) unstable; urgency=low
 
   * dh: Avoid passing --with on to subcommands. Closes: #490886
   * dh_installchangelogs: When searching for changelog in v7 mode, skip
     empty files. Closes: #490937
 
- -- Joey Hess <joeyh@debian.org>  Mon, 14 Jul 2008 20:35:47 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 19 Jul 2008 15:34:13 -0400
 
 debhelper (7.0.15) unstable; urgency=low
 
