--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.0.17) UNRELEASED; urgency=low
+
+  [ Per Olofsson ]
+  * dh_auto_install: Fix man page, was referring to dh_auto_clean.
+
+ -- Per Olofsson <pelle@debian.org>  Wed, 23 Jul 2008 10:52:14 +0200
+
 debhelper (7.0.16) unstable; urgency=low
 
   * dh: Avoid passing --with on to subcommands. Closes: #490886
