Fix typo in French translation, about debian/package.README.Debian files.

--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -2415,7 +2415,7 @@ msgstr ""
 "paquet. S<Nota :> Si le paquet n'est pas natif Debian, le fichier debian/"
 "TODO sera installé sous le nom TODO.Debian. Pour des raisons de cohérence, "
 "le fichier README.debian est installé sous le nom de README.Debian. Enfin, "
-"des fichiers debian/paquet/README.Debian et debian/paquet.TODO peuvent être "
+"des fichiers debian/paquet.README.Debian et debian/paquet.TODO peuvent être "
 "utilisés pour fournir des fichiers TODO et README aux sous-paquets."
 
 # type: textblock
