dh_gencontrol: Drop the Homepage field from udebs. Closes: #492719

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (7.0.17) UNRELEASED; urgency=low
   [ Per Olofsson ]
   * dh_auto_install: Fix man page, was referring to dh_auto_clean.
 
+  [ Joey Hess ]
+  * dh_gencontrol: Drop the Homepage field from udebs. Closes: #492719
+
  -- Per Olofsson <pelle@debian.org>  Wed, 23 Jul 2008 10:52:14 +0200
 
 debhelper (7.0.16) unstable; urgency=low
