--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (7.0.17) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * dh_gencontrol: Drop the Homepage field from udebs. Closes: #492719
+  * Typo. Closes: #493062
 
  -- Per Olofsson <pelle@debian.org>  Wed, 23 Jul 2008 10:52:14 +0200
 
