dh_installchangelogs: Fall back to looking for changelog files ending with ".txt". Closes: #498460

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.0.18) UNRELEASED; urgency=low
+
+  * dh_installchangelogs: Fall back to looking for changelog files ending
+    with ".txt". Closes: #498460
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 10 Sep 2008 13:58:00 -0400
+
 debhelper (7.0.17) unstable; urgency=low
 
   [ Per Olofsson ]
