dh_gencontrol: Ensure misc:Depends is set in substvars to avoid dpkg complaining about it when it's empty. Closes: #498666

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (7.0.18) UNRELEASED; urgency=low
 
   * dh_installchangelogs: Fall back to looking for changelog files ending
     with ".txt". Closes: #498460
+  * dh_gencontrol: Ensure misc:Depends is set in substvars to avoid dpkg
+    complaining about it when it's empty. Closes: #498666
 
  -- Joey Hess <joeyh@debian.org>  Wed, 10 Sep 2008 13:58:00 -0400
 
