--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (7.0.18) UNRELEASED; urgency=low
     with ".txt". Closes: #498460
   * dh_gencontrol: Ensure misc:Depends is set in substvars to avoid dpkg
     complaining about it when it's empty. Closes: #498666
+  * dh: Fix typo in example. Closes: #500836
 
  -- Joey Hess <joeyh@debian.org>  Wed, 10 Sep 2008 13:58:00 -0400
 
