--- a/doc/TODO
+++ b/doc/TODO
@@ -3,11 +3,6 @@ list grows - I welcome patches to fix items on it!
 
 Wishlist items:
 
-* All debhelper programs should only accept the options they are documented
-  to accept (rather than accepting all debhelper options). This is mostly a
-  matter of moving command-specific options out of Dh_Getopt and into the
-  individial command's calls to init(). (#112349)
-
 v8:
 
 * escaping in config files (for whitespace)?
@@ -34,3 +29,6 @@ Deprecated:
 * dh_installinit --init-script
 * dh_python
 * dh_clean -k (make it warn)
+* Convert warning about unknown command-line options back to an error.
+  Need to wait a file (from Oct 2008) to ensure that most rules files
+  that pass unknown options to commands are fixed.
