--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.1.0) UNRELEASED; urgency=low
+debhelper (7.1.0) experimental; urgency=low
 
   * dh_installchangelogs: Fall back to looking for changelog files ending
     with ".txt". Closes: #498460
