dh_install(1): Order options alphabetically. Closes:# 503896

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.1.1) UNRELEASED; urgency=low
+
+  * dh_install(1): Order options alphabetically. Closes:# 503896
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 03 Nov 2008 18:50:03 -0500
+
 debhelper (7.1.0) experimental; urgency=low
 
   * dh_installchangelogs: Fall back to looking for changelog files ending
