--- a/debhelper.pod
+++ b/debhelper.pod
@@ -400,7 +400,7 @@ Changes from V6 are:
 
 dh_install, will fall back to looking for files in debian/tmp if it doesn't
 find them in the current directory (or wherever you tell it look using
---srcdir). This allows dh_install to interoperate with dh_auto_install,
+--sourcedir). This allows dh_install to interoperate with dh_auto_install,
 which installs to debian/tmp, without needing any special parameters.
 
 =item -
