--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (7.1.1) UNRELEASED; urgency=low
 
   * dh_install(1): Order options alphabetically. Closes:# 503896
+  * Fix some docs that refered to --srcdir rather than --sourcedir.
+    Closes: #504742
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Nov 2008 18:50:03 -0500
 
