--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.1.1) UNRELEASED; urgency=low
+debhelper (7.1.1) experimental; urgency=low
 
   * dh_install(1): Order options alphabetically. Closes:# 503896
   * Fix some docs that refered to --srcdir rather than --sourcedir.
@@ -11,7 +11,7 @@ debhelper (7.1.1) UNRELEASED; urgency=low
     (Note that getopt will warn about such unknown options. Eliminating this
     warning without reimplementing much of Getopt::Long wasn't practical.)
 
- -- Joey Hess <joeyh@debian.org>  Mon, 03 Nov 2008 18:50:03 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 14 Dec 2008 23:19:27 -0500
 
 debhelper (7.1.0) experimental; urgency=low
 
