dh: Fix typo. Closes: #509754

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.1.2) UNRELEASED; urgency=low
+
+  * dh: Fix typo. Closes: #509754
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
+
 debhelper (7.1.1) experimental; urgency=low
 
   * dh_install(1): Order options alphabetically. Closes:# 503896
