debhelper.pod: Fix typo. Closes: #510180

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -366,8 +366,8 @@ Changes from V5 are:
 
 =item -
 
-Commands that generate maintainer script fragements will order the
-fragements in reverse order for the prerm and postrm scripts.
+Commands that generate maintainer script fragments will order the
+fragments in reverse order for the prerm and postrm scripts.
 
 =item -
 
