--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -901,8 +901,8 @@ msgstr ""
 # type: textblock
 #: debhelper.pod:369
 msgid ""
-"Commands that generate maintainer script fragements will order the "
-"fragements in reverse order for the prerm and postrm scripts."
+"Commands that generate maintainer script fragments will order the "
+"fragments in reverse order for the prerm and postrm scripts."
 msgstr ""
 
 # type: textblock
