--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -923,8 +923,8 @@ msgstr "Les changements par rapport à la version 3 S<sont :>"
 # type: textblock
 #: debhelper.pod:369
 msgid ""
-"Commands that generate maintainer script fragements will order the "
-"fragements in reverse order for the prerm and postrm scripts."
+"Commands that generate maintainer script fragments will order the "
+"fragments in reverse order for the prerm and postrm scripts."
 msgstr ""
 
 # type: textblock
