--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -676,8 +676,8 @@ msgstr ""
 # type: textblock
 #: debhelper.pod:369
 msgid ""
-"Commands that generate maintainer script fragements will order the "
-"fragements in reverse order for the prerm and postrm scripts."
+"Commands that generate maintainer script fragments will order the "
+"fragments in reverse order for the prerm and postrm scripts."
 msgstr ""
 
 # type: textblock
