dh_gconf: Support mandatory settings. Closes: #513923

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (7.1.2) UNRELEASED; urgency=low
 
   * dh: Fix typo. Closes: #509754
   * debhelper.pod: Fix typo. Closes: #510180
+  * dh_gconf: Support mandatory settings. Closes: #513923
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
 
