--- a/doc/TODO
+++ b/doc/TODO
@@ -30,5 +30,5 @@ Deprecated:
 * dh_python
 * dh_clean -k (make it warn)
 * Convert warning about unknown command-line options back to an error.
-  Need to wait a file (from Oct 2008) to ensure that most rules files
+  Need to wait a while (from Oct 2008) to ensure that most rules files
   that pass unknown options to commands are fixed.
