dh override targets
* dh: debian/rules override targets can change what is run
  for a specific debhelper command in a sequence.
* dh: Redid all the examples to use override targets, since these
  eliminate all annoying boilerplate and are much easier to understand
  than the old method.
* Remove rules.simple example, there's no need to use explcit targets
  with dh anymore.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
-debhelper (7.1.2) UNRELEASED; urgency=low
+debhelper (7.2.0) UNRELEASED; urgency=low
 
+  * dh: debian/rules override targets can change what is run
+    for a specific debhelper command in a sequence.
+  * dh: Redid all the examples to use override targets, since these
+    eliminate all annoying boilerplate and are much easier to understand
+    than the old method.
+  * Remove rules.simple example, there's no need to use explcit targets
+    with dh anymore.
   * dh: Fix typo. Closes: #509754
   * debhelper.pod: Fix typo. Closes: #510180
   * dh_gconf: Support mandatory settings. Closes: #513923
