--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (7.2.0) UNRELEASED; urgency=low
 
   * dh: debian/rules override targets can change what is run
     for a specific debhelper command in a sequence.
+    (Thanks Modestas Vainius for the improved makefile parser.)
   * dh: Redid all the examples to use override targets, since these
     eliminate all annoying boilerplate and are much easier to understand
     than the old method.
