dh: Support debian/rules calling make with -B
That is useful to avoid issues with phony implicit rules
(see bug #509756).

Apparently make treats the name of the Makfile as an automaticall
set up target, so this causes it to try to build the Makefile
even though it's up-to-date, and the implicit target
makes it run 'dh debian/rules'.

So, make that a no-op.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ debhelper (7.2.0) UNRELEASED; urgency=low
   * dh: Fix typo. Closes: #509754
   * debhelper.pod: Fix typo. Closes: #510180
   * dh_gconf: Support mandatory settings. Closes: #513923
+  * dh: Support debian/rules calling make with -B,
+    which is useful to avoid issues with phony implicit
+    rules (see bug #509756).
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
 
