Improve error messages when child commands fail.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ debhelper (7.2.0) UNRELEASED; urgency=low
   * dh: Support debian/rules calling make with -B,
     which is useful to avoid issues with phony implicit
     rules (see bug #509756).
+  * Improve error messages when child commands fail.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
 
