--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ debhelper (7.2.0) UNRELEASED; urgency=low
     which is useful to avoid issues with phony implicit
     rules (see bug #509756).
   * Improve error messages when child commands fail.
+  * Depend on dpkg-dev 1.14.19, the first to support Package-Type
+    fields in dpkg-gencontrol.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
 
