dh_gencontrol: No longer need to generate the udeb filename when calling dpkg-gencontrol.
* dh_gencontrol: No longer need to generate the udeb filename
  when calling dpkg-gencontrol.
* dh_gencontrol: Do not need to tell dpkg-gencontol not to
  include the Homepage field in udebs (fixed in dpkg-dev 1.14.17).

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ debhelper (7.2.0) UNRELEASED; urgency=low
   * Improve error messages when child commands fail.
   * Depend on dpkg-dev 1.14.19, the first to support Package-Type
     fields in dpkg-gencontrol.
+  * dh_gencontrol: No longer need to generate the udeb filename
+    when calling dpkg-gencontrol.
+  * dh_gencontrol: Do not need to tell dpkg-gencontol not to
+    include the Homepage field in udebs (fixed in dpkg-dev 1.14.17).
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
 
