--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ debhelper (7.2.0) UNRELEASED; urgency=low
   * dh: Redid all the examples to use override targets, since these
     eliminate all annoying boilerplate and are much easier to understand
     than the old method.
-  * Remove rules.simple example, there's no need to use explcit targets
+  * Remove rules.simple example, there's little need to use explcit targets
     with dh anymore.
   * dh: Fix typo. Closes: #509754
   * debhelper.pod: Fix typo. Closes: #510180
@@ -22,7 +22,7 @@ debhelper (7.2.0) UNRELEASED; urgency=low
   * dh_gencontrol: Do not need to tell dpkg-gencontol not to
     include the Homepage field in udebs (fixed in dpkg-dev 1.14.17).
 
- -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Feb 2009 18:33:44 -0500
 
 debhelper (7.1.1) experimental; urgency=low
 
