dh override targets
* dh: debian/rules override targets can change what is run
  for a specific debhelper command in a sequence.
* dh: Redid all the examples to use override targets, since these
  eliminate all annoying boilerplate and are much easier to understand
  than the old method.
* Remove rules.simple example, there's no need to use explcit targets
  with dh anymore.
(cherry picked from commit 0f3f59fe6058edfda4010dc88bd3b8aa3ae70a6d)

Conflicts:

	Debian/Debhelper/Dh_Getopt.pm
	Debian/Debhelper/Dh_Lib.pm
	debian/changelog
	dh

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (7.2.0) UNRELEASED; urgency=low
+
+  * dh: debian/rules override targets can change what is run
+    for a specific debhelper command in a sequence.
+  * dh: Redid all the examples to use override targets, since these
+    eliminate all annoying boilerplate and are much easier to understand
+    than the old method.
+  * Remove rules.simple example, there's no need to use explcit targets
+    with dh anymore.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
+
 debhelper (7.0.17) unstable; urgency=low
 
   [ Per Olofsson ]
