dh: Support debian/rules calling make with -B
That is useful to avoid issues with phony implicit rules
(see bug #509756).

Apparently make treats the name of the Makfile as an automaticall
set up target, so this causes it to try to build the Makefile
even though it's up-to-date, and the implicit target
makes it run 'dh debian/rules'.

So, make that a no-op.
(cherry picked from commit 378b377ef732119de4c2a08dcb9721500b017da1)

Conflicts:

	debian/changelog
	dh

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (7.2.0) UNRELEASED; urgency=low
     than the old method.
   * Remove rules.simple example, there's no need to use explcit targets
     with dh anymore.
+  * dh: Support debian/rules calling make with -B,
+    which is useful to avoid issues with phony implicit
+    rules (see bug #509756).
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2008 16:26:36 -0500
 
